--- a/public/index.html
+++ b/public/index.html
@@ -90,14 +90,7 @@ html, body {
 @keyframes introHide{to{opacity:0;visibility:hidden;transform:translate(-50%,-80%)}}
 
 /* ---------------- Grid ---------------- */
-.grid{
-  position:absolute;
-  inset:5vh 1.5vw;
-  display:grid;
-  gap:1vw;
-  opacity:0; /* 🔑 inicio invisible */
-  animation:gridFadeIn 0.6s 3.2s forwards; /* fade-in suave coordinado */
-}
+.grid{position:absolute;inset:5vh 1.5vw;display:grid;gap:1vw}
 
 @keyframes gridFadeIn {
   from { opacity:0; transform:translateY(12px); }
