--- a/public/index.html
+++ b/public/index.html
@@ -146,6 +146,7 @@ html, body {
 
 /* Labels y frases */
 /* 👉 Labels y frases con animación Jobs-like */
+/* 👉 Labels y frases con animación Jobs-like */
 .label {
   z-index:2;
   text-align:center;
@@ -153,7 +154,7 @@ html, body {
   transition:opacity .25s, transform .25s;
   transform:translateY(0);
   font-size:clamp(1rem, 3vw, 1.6rem); /* palabra más grande */
-  font-weight:600;                     /* más fuerte */
+  font-weight:700;                     /* más fuerte */
   line-height:1.3;
   letter-spacing:0.3px;
 }
@@ -169,7 +170,7 @@ html, body {
   transform:translateY(6px); /* arranca un poco abajo */
   transition:opacity .25s, transform .25s;
   font-size:clamp(0.95rem, 2.8vw, 1.4rem); /* más ligera que el label */
-  font-weight:500;
+  font-weight:600;                          /* ahora también negrita */
   line-height:1.35;
 }
 
