--- a/public/index.html
+++ b/public/index.html
@@ -232,10 +232,22 @@ html, body {
 
 #tarjetaCard {
   font-size: clamp(16px, 2.6vw, 22px);
-  line-height: 1.2;
+  line-height: 1.35;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
+
+  /* 🔑 Animación de entrada Jobs-like */
+  opacity:0;
+  transform:scale(0.92);
+  animation: cardIn 0.45s ease-out forwards;
+  border-radius:20px;
 }
+
+@keyframes cardIn {
+  from { opacity:0; transform:scale(0.92); }
+  to   { opacity:1; transform:scale(1); }
+}
+
 #tarjetaCard img {
   max-width: 25%;
   max-height: 38px;
