--- a/public/index.html
+++ b/public/index.html
@@ -236,14 +236,19 @@ html, body {
   position:fixed;
   inset:0;
   z-index:999;
-  background:rgba(0,0,0,.72); /* un poco más ligero */
   align-items:center;
   justify-content:center;
 
-  /* 🔑 Efecto vidrio Jobs-like */
-  backdrop-filter: blur(6px);
-  -webkit-backdrop-filter: blur(6px);
+  /* 🔑 Overlay profundo pero nítido */
+  background: radial-gradient(
+    circle at center,
+    rgba(0,0,0,0.85) 0%,
+    rgba(0,0,0,0.92) 100%
+  );
+
+  /* ❌ Quitamos blur para evitar cansancio visual */
 }
+
 
 #tarjetaCard {
   width:360px;
