--- a/public/index.html
+++ b/public/index.html
@@ -239,15 +239,21 @@ html, body {
   align-items:center;
   justify-content:center;
 
-  /* 🔑 Overlay profundo pero nítido */
   background: radial-gradient(
     circle at center,
     rgba(0,0,0,0.85) 0%,
     rgba(0,0,0,0.92) 100%
   );
 
-  /* ❌ Quitamos blur para evitar cansancio visual */
+  opacity:0;
+  transition: opacity .35s ease;
 }
+
+#tarjetaOverlay.show {
+  display:flex;
+  opacity:1;
+}
+
 
 
 #tarjetaCard {
@@ -470,18 +476,19 @@ function pickTextColor(bg) {
 
   
 
+const overlay = document.getElementById("tarjetaOverlay");
+const card    = document.getElementById("tarjetaCard");
+
 btnShare.onclick = () => {
   const t = libro.tarjeta;
-  const card = document.getElementById("tarjetaCard");
 
   // Fallbacks seguros
   const safePaper  = t.style.paper  || "#111111";
-  const safeInk    = t.style.ink    || pickTextColor(safePaper);
   const safeBorder = t.style.border || "#666";
   const safeSerif  = t.style.serif  || "Georgia, serif";
   const safeSans   = t.style.sans   || "Arial, sans-serif";
 
-card.style = `
+  card.style = `
     width: min(420px, 90vw);
     height: min(600px, 90vh);
     background:${safePaper};
@@ -493,10 +500,10 @@ card.style = `
     display:flex;
     flex-direction:column;
     justify-content:space-between;
-    font-size:clamp(18px, 2.2vw, 26px); /* más grande en desktop */
+    font-size:clamp(18px, 2.2vw, 26px);
     line-height:1.45;
     box-sizing:border-box;
-    box-shadow:0 8px 32px rgba(0,0,0,.45); /* efecto depth */
+    box-shadow:0 8px 32px rgba(0,0,0,.45);
   `;
 
   card.innerHTML = `
@@ -527,26 +534,27 @@ card.style = `
     </div>
   `;
 
-
-  document.getElementById("tarjetaOverlay").style.display = "flex";
+  // 🔑 Fade-in elegante
+  overlay.style.display = "flex";
+  requestAnimationFrame(() => overlay.classList.add("show"));
 };
 
-
-
- 
-
-// cerrar overlay al tocar fuera
-document.getElementById("tarjetaOverlay").onclick = () =>
-
-  // Cerrar con ESC en desktop
-document.addEventListener("keydown", e => {
-  if (e.key === "Escape") {
-    document.getElementById("tarjetaOverlay").style.display = "none";
+// cerrar al hacer click fuera
+overlay.addEventListener("click", e => {
+  if (e.target === overlay) {
+    overlay.classList.remove("show");
+    setTimeout(() => overlay.style.display = "none", 350);
   }
 });
 
-  
-  document.getElementById("tarjetaOverlay").style.display = "none";
+// cerrar con ESC
+document.addEventListener("keydown", e => {
+  if (e.key === "Escape" && overlay.classList.contains("show")) {
+    overlay.classList.remove("show");
+    setTimeout(() => overlay.style.display = "none", 350);
+  }
+});
+
 
 
 
