--- a/public/index.html
+++ b/public/index.html
@@ -395,9 +395,9 @@ const grid=document.getElementById("grid"),
 
 // Frases rotativas estilo Jobs
 const frasesIntro = [
-  "Un gesto. Un libro. Una chispa.",
-  "Abres la app. Abres un libro. Nada más.",
-  "Un instante basta para cambiar tu día."
+  "¿Qué sientes ahora?",
+  "¿Qué sientes ahora?",
+  "¿Qué sientes ahora?"
 ];
 document.getElementById("intro").innerText =
   frasesIntro[Math.floor(Math.random() * frasesIntro.length)];
