--- a/public/index.html
+++ b/public/index.html
@@ -377,11 +377,11 @@ body.webview {
     <!--<span class="txt">Me gusta<br>quiero<br>donar</span> -->
   </button>
   <button id="fisico">
-    <span class="icon">📖</span>
+    <span class="icon">🔟</span>
     <!--<span class="txt">Abrí un<br>libro<br>físico</span> -->
   </button>
     <button id="share">
-    <span class="icon">🔗</span>
+    <span class="icon">📖</span>
   </button>
 </div>
 
