--- a/public/index.html
+++ b/public/index.html
@@ -372,18 +372,12 @@ body.webview {
 
 <!-- CTA (aparece tras revelar) -->
 <div class="cta" id="cta">
-  <button id="otro">
-    <span class="icon">🎲</span>
-    <!--<span class="txt">Me gusta<br>quiero<br>donar</span> -->
-  </button>
-  <button id="fisico">
-    <span class="icon">🔟</span>
-    <!--<span class="txt">Abrí un<br>libro<br>físico</span> -->
-  </button>
-    <button id="share">
-    <span class="icon">📖</span>
-  </button>
+  <button id="otro"><span class="icon">🎲</span></button>
+  <button id="fisico"><span class="icon">🔟</span></button>
+  <button id="share"><span class="icon">📖</span></button>
+  <button id="video"><span class="icon">🎬</span></button>
 </div>
+
 
 <!-- Overlay de tarjeta coleccionable -->
 <div id="tarjetaOverlay">
