--- a/public/index.html
+++ b/public/index.html
@@ -412,8 +412,10 @@ const grid=document.getElementById("grid"),
       btnOtro=document.getElementById("otro"),
       btnLibro=document.getElementById("fisico"),
       btnShare=document.getElementById("share"),
+      btnVideo=document.getElementById("video"),
       cele=document.getElementById("cele"),
       celeMsg=document.getElementById("celeMsg");
+
 
 // Frases rotativas estilo Jobs
 const frasesIntro = [
